# flask-caching

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cache.py  test_template.html  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: lock.yaml  pre-commit.yaml  publish.yaml  publish_to_pypi.yml  tests.yaml  tests.yml
Flask_Cache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: Makefile  api.rst  conf.py  index.rst  license.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  modindex.html  objects.inv  search.html  searchindex.js
docs/_build/html/_static/: flasky.css  pygments.css
docs/_templates/: sidebarintro.html
examples/: hello.cfg  hello.py
flask_cache/: __init__.py  _compat.py  backends.py  jinja2ext.py
flask_caching/: __init__.py  _compat.py  backends.py  jinja2ext.py  serialization.py
flask_caching/backends/: __init__.py  backends.py  base.py  cache.py  clients.py  filesystem.py  filesystemcache.py  memcache.py  null.py  nullcache.py  redis.py  rediscache.py  simple.py  simplecache.py  uwsgicache.py
flask_caching/contrib/: __init__.py  googlecloudstoragecache.py  ignitecache.py  uwsgicache.py
flaskext/: cache.py
flaskext/cache/: __init__.py  backends.py  jinja2ext.py
requirements/: dev.in  dev.txt  docs.txt  tests.in  tests.txt  typing.in  typing.txt
src/flask_caching/: __init__.py  jinja2ext.py  serialization.py  utils.py
src/flask_caching/backends/: __init__.py  base.py  filesystemcache.py  memcache.py  nullcache.py  rediscache.py  simplecache.py  uwsgicache.py
src/flask_caching/contrib/: dynamodbcache.py  googlecloudstoragecache.py  uwsgicache.py
tests/: __init__.py  conftest.py  test_backend_cache.py  test_basic_app.py  test_cache.py  test_custom_key_generation.py  test_init.py  test_memoize.py  test_memoize_property.py  test_pickle.py  test_py314_annotations.py  test_templates.py  test_view.py
tests/backends/cache/: conftest.py  test_backend_cache.py
