[metadata]
name = Flask-Caching
version = attr: flask_caching.__version__
url = https://github.com/pallets-eco/flask-caching
project_urls =
    Donate = https://palletsprojects.com/donate
    Documentation = https://flask-caching.readthedocs.io
    Changes = https://flask-caching.readthedocs.io/en/latest/changelog.html
    Source Code = https://github.com/pallets-eco/flask-caching
    Issue Tracker = https://github.com/pallets-eco/flask-caching/issues
    Twitter = https://twitter.com/PalletsTeam
    Chat = https://discord.gg/pallets
license = BSD
license_files = LICENSE
author = Peter Justin
author_email = peter.justin@outlook.com
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = Adds caching support to Flask applications.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
    # explicit strict on zip calls
    B905
# up to 88 allowed by bugbear B950
max-line-length = 80

[coverage:run]
branch = True
omit =
    src/flask_caching/contrib/*
source =
    flask_caching
    tests

[coverage:paths]
source =
    src
    */site-packages

[tool:pytest]
testpaths = tests

[mypy]
files = src/flask_caching/
warn_unused_configs = true

# TODO if all of these can be enabled we can just set 'strict = true'
disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
# no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

python_version = 3.8
[mypy-uwsgi]
ignore_missing_imports = True

[mypy-rediscluster]
ignore_missing_imports = True

[mypy-pylibmc]
ignore_missing_imports = True

[mypy-google.*]
ignore_missing_imports = True
